# game

src/: CMakeLists.txt  Camera.cpp  Camera.h  Game.cpp  Game.h  GameObject.cpp  GameObject.h  Map.cpp  Map.h  Math.h  Player.cpp  Player.h  Sprite.h  Transform.h  Window.cpp  Window.h  World.cpp  World.h  main.cpp
src/Utils/Math/: Math.h
src/core/: Animation.cpp  Animation.h  CMakeLists.txt  Camera.cpp  Camera.h  Collider.cpp  Collider.h  GameObject.cpp  GameObject.h  GameStates.h  Map.cpp  Map.h  Player.cpp  Player.h  Projectile.cpp  Projectile.h  Rigidbody.h  Sprite.h  Tile.cpp  Tile.h  Transform.h  World.cpp  World.h
src/files/Levels/: level1.txt
src/files/images/: player.xcf
src/files/levels/: earth.txt  level1.txt
src/graphics/: CMakeLists.txt  Window.cpp  Window.h
src/utils/log/: Log.h
src/utils/math/: Math.h
src/utils/tools/: Framerate.h
